--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minima:
 plugins:
   - jekyll-remote-theme
 header_pages:
-  - navigation/ai.md
+  - navigation/TeamTeach.md
   - navigation/shared_interests/home.md
   - navigation/create_and_compete/home.md
   - navigation/voteforthegoat/home.md
